                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-03-2006 changed: avoid closing audiocodec/renderer if stream's codec info didn't change over vts borders
 - 07-03-2006 changed: general stream discontinuity detection in dvdplayer (support for non dvd streams).
 - 07-03-2006 changed: Music Party Mode now uses a database table for its history, means another upgrade to version 1.6
 - 07-03-2006 changed: when Music Party Mode is enabled, all the extraneous playlist buttons in the Now Playing window are disabled
 - 07-03-2006 changed: "Delete" option in the root share context menu to "Remove Source" for consistency
 - 07-03-2006 fixed: playlist caching
 - 07-03-2006 changed: files added to the musicdatabase with no artist or album set will be added to an artist/album "Unknown"
                       musicdatabase will be updated to version 1.5
                       This also fixes: some artists in music nav are not selectable
 - 07-03-2006 fixed: Multiple paths in XBoxMediaCenter.xml would mean games wouldn't be found from Kai.
 - 06-03-2006 added: <number> tag to label control (for display of numbers)
 - 06-03-2006 added: Skin.SetBool and Skin.Reset <onclick> functions.
 - 06-03-2006 changed: Per button <texturefocus> images in scrolling button scrollers only show when scrolling has completed.
 - 06-03-2006 fixed: auth http streams containing special characters( mplayer.dll )
 - 06-03-2006 updated: tinyxml to version 2.4.3
 - 06-03-2006 fixed: ms soundtrack directory showed two parent folder items
 - 06-03-2006 fixed: mem leak in ms soundtrack directory
 - 06-03-2006 fixed: cdda disc without cddb info shows only a tracknumber as label